# reactive

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
android/: Cargo.toml
android-lib/: build.gradle.kts  settings.gradle.kts
android-macros/: Cargo.toml
android-macros/src/: lib.rs
android/src/: app_loop.rs  bindings.rs  desc.rs  lib.rs
android/src/ui/: button.rs  click_listener.rs  context.rs  flex.rs  flex_layout.rs  image.rs  label.rs  list_view.rs  mod.rs  platform.rs  progress_indicator.rs  scope.rs  slider.rs  stack.rs  text_input.rs  text_watcher.rs  view_component.rs  window.rs
appkit/: Cargo.toml
appkit/examples/: basic.rs  github_profile.rs  pokedex.rs  posts.rs
appkit/src/: lib.rs  ui.rs
appkit/src/ui/: button.rs  checkbox.rs  collection_view.rs  context.rs  flex.rs  image_codec.rs  image_view.rs  label.rs  layout.rs  layout_view.rs  mod.rs  native.rs  platform.rs  progress_indicator.rs  slider.rs  stack.rs  text.rs  text_input.rs  text_view.rs  view_component.rs  window.rs
apple/: Cargo.toml
apple/src/: action_target.rs  bindable.rs  lib.rs  prop.rs  text_input_state.rs  view_builder.rs
core/: Cargo.toml
core/src/: component.rs  component_scope.rs  lib.rs  reactive_scope.rs  scope.rs  signal.rs  signals.rs  sorted_vec.rs  vec_utils.rs
demo/: Cargo.toml  build.rs
demo-app/: Cargo.toml
demo-app/android/: Cargo.toml  build.gradle.kts  settings.gradle.kts
demo-app/desktop/: Cargo.toml  build.rs
demo-app/desktop/src/: hn_stories.rs  main.rs
demo-app/macos/: Cargo.toml
demo-app/macos/src/: main.rs  text_input_demo.rs
demo-app/src/: lib.rs
demo/src/: main.rs
demo/strings/: en-US.ftl  fr-FR.ftl
derive-jni/: Cargo.toml
derive-jni-macro/: Cargo.toml
derive-jni-macro/src/: bridge.rs  call.rs  lib.rs  sig.rs
derive-jni/src/: invocation_error.rs  java_value.rs  lib.rs  method_sig.rs
dexer/: Cargo.toml
dexer-macros/: Cargo.toml
dexer-macros/src/: codegen.rs  lib.rs  parse.rs  validate.rs
dexer/src/: class_def.rs  lib.rs  output.rs
docs/: README.md  architecture-principles.md
example/: Cargo.toml  build.rs  build_old.rs  kogan_prefs.rs
example/src/: gen.rs
gtk/: Cargo.toml
jbridge/: Cargo.toml
jbridge/src/: desc.rs  desc_jni.rs  jni_error.rs  jni_field.rs  jni_token.rs  lib.rs  parse.rs  prop.rs  token.rs
jranerator/: Cargo.toml
jranerator/src/: class_like.rs  classy_impl.rs  convert.rs  desc_utils.rs  errors.rs  field.rs  generate.rs  jar.rs  lib.rs  lib_old.rs  main.rs  maven.rs  method.rs  props.rs  sig.rs  type_token.rs  utils.rs
reactive-core/: Cargo.toml
reactive-core/src/: clean_up.rs  component.rs  context.rs  data.rs  effect.rs  effect_context.rs  effect_run.rs  lib.rs  memory_run.rs  node.rs  react_context.rs  resource.rs  setup_context.rs  task.rs  tasks_queue.rs  tracker.rs
reactive-derive/: Cargo.toml
reactive-derive-macro/: Cargo.toml
reactive-derive-macro/src/: builder.rs  children.rs  jsx.rs  node.rs
reactive-derive/src/: lib.rs
reactive-droid/: Cargo.toml
reactive-droid/droid/: build.gradle.kts  settings.gradle.kts
reactive-droid/droid/app/: build.gradle.kts
reactive-droid/droid/app/src/androidTest/java/dev/fanchao/reactive/: ExampleInstrumentedTest.kt
reactive-droid/droid/app/src/main/: AndroidManifest.xml
reactive-droid/droid/app/src/main/java/dev/fanchao/reactive/: MainActivity.java  ReactiveContext.java
reactive-droid/droid/app/src/main/res/values/: strings.xml  themes.xml
reactive-droid/droid/app/src/test/java/dev/fanchao/reactive/: ExampleUnitTest.kt
reactive-droid/droid/gradle/wrapper/: gradle-wrapper.properties
reactive-droid/src/: env.rs  example.rs  lib.rs  proxy.rs  view_component.rs  waker.rs
reactive-droid/src/core/: click.rs  mod.rs  text.rs  view.rs
reactive-droid/src/value/: ext.rs  mod.rs  primitive.rs  strings.rs
reactive-gradle-plugin/: build.gradle.kts  settings.gradle.kts
reactive-macros/: Cargo.toml
reactive-macros/src/: attr.rs  builder.rs  lib.rs  node.rs
resources/: Cargo.toml
resources-build/: Cargo.toml
resources-build/src/: assets.rs  i18n.rs  lib.rs  names.rs
resources/src/: assets.rs  i18n.rs  lib.rs  qualifier.rs  reactive.rs
src/: clean_up.rs  component.rs  effect.rs  effect_context.rs  effect_run.rs  lib.rs  node.rs  node_ref.rs  react_context.rs  registry.rs  render.rs  resource.rs  setup.rs  setup_context.rs  signal.rs  task.rs  tasks_queue.rs  tracker.rs
src/core_component/: mod.rs  show.rs  (+1 more)
ui/: Cargo.toml
ui-core/: Cargo.toml
ui-core/examples/: flex_demo.rs
ui-core/src/: app_loop.rs  encoding.rs  lib.rs  prop.rs  view_builder.rs  view_component.rs
ui-core/src/android/: bindings.rs  desc.rs  mod.rs
ui-core/src/android/ui/: button.rs  context.rs  flex.rs  flex_layout.rs  image.rs  label.rs  list_view.rs  platform.rs  progress_indicator.rs  scope.rs  seek_bar_listener.rs  slider.rs  stack.rs  text_input.rs  view_component.rs  window.rs
ui-core/src/appkit/: mod.rs
ui-core/src/appkit/ui/: app_loop.rs  button.rs  collection_view.rs  flex.rs  image_codec.rs  image_view.rs  label.rs  mod.rs  platform.rs  progress_indicator.rs  slider.rs  stack.rs  text_view.rs  window.rs
ui-core/src/apple/: action_target.rs  mod.rs
ui-core/src/gtk/: mod.rs
ui-core/src/gtk/ui/: button.rs  flex.rs  gtk_view.rs  image_codec.rs  image_view.rs  label.rs  list_view.rs  mod.rs  platform.rs  progress_indicator.rs  slider.rs  stack.rs  text_input.rs  window.rs
ui-core/src/layout/: algorithm.rs  align.rs  center.rs  expanded.rs  flex.rs  mod.rs  padding.rs  sized_box.rs  types.rs
ui-core/src/uikit/: mod.rs
ui-core/src/uikit/ui/: label.rs  mod.rs  stack.rs  text.rs  view_component.rs
ui-core/src/widgets/: button.rs  column.rs  common_modifiers.rs  flex.rs  image.rs  image_codec.rs  indexed_native.rs  label.rs  list.rs  list_diff.rs  mod.rs  modifier.rs  native.rs  platform.rs  platform_view.rs  progress_indicator.rs  row.rs  slider.rs  stack.rs  taffy.rs  taffy_modifier.rs  text_input.rs  window.rs
uikit/: Cargo.toml
uikit/src/ui/: button.rs  context.rs  label.rs  mod.rs  view_component.rs  view_controller.rs
(+88 files in other folders)
