[package]
name = "reactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
derive_more = "0.99.17"
linked_hash_set = "0.1.4"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full"] }
