[package]
name = "reactive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-broadcast = "0.6.0"
derive_builder = "0.12.0"
derive_more = "0.99.17"
futures = "0.3.29"
lazy_static = "1.4.0"
linked_hash_set = "0.1.4"
local-waker = "0.1.4"
log = "0.4.20"
parking_lot = "0.12.1"
smallvec = { version = "1.11.1", features = ["const_generics"] }
thiserror = "1.0.50"

[dev-dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
