[package]
name = "appkit"
version = "0.1.0"
edition = "2024"

[dependencies]
apple = { path = "../apple" }
reactive_core = { path = "../core", package = "core" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSThread"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
    "NSStackView",
    "NSButton",
    "NSTextField",
    "NSView",
    "NSControl",
    "NSResponder",
    "NSGraphics",
    "NSCell",
    "NSText",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSSlider",
] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["time"] }

[[example]]
name = "basic"
