[package]
name = "appkit"
version = "0.1.0"
edition = "2024"

[dependencies]
apple = { path = "../apple" }
reactive_core = { path = "../core", package = "core" }
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSThread", "NSIndexPath", "NSSet"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
    "NSStackView",
    "NSButton",
    "NSTextField",
    "NSView",
    "NSControl",
    "NSResponder",
    "NSGraphics",
    "NSCell",
    "NSText",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSSlider",
    "NSCollectionView",
    "NSCollectionViewFlowLayout",
    "NSCollectionViewLayout",
    "NSScrollView",
    "NSViewController",
    "NSLayoutConstraint",
    "NSLayoutAnchor",
    "block2",
] }

[dev-dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }

[[example]]
name = "basic"

[[example]]
name = "pokedex"

[[example]]
name = "posts"
