[package]
name = "appkit"
version = "0.1.0"
edition = "2024"

[dependencies]
apple = { path = "../apple" }
reactive-core = { path = "../core", package = "core" }
ui-core = { path = "../ui-core" }
block2 = "0.6"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSThread", "NSIndexPath", "NSSet", "NSNotification", "NSAttributedString", "NSDictionary", "NSRange"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGImage"] }
objc2-core-foundation = { version = "0.3.2", features = ["CFData"] }
objc2-image-io = { version = "0.3.2", features = ["CGImageSource"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication",
    "NSWindow",
    "NSStackView",
    "NSButton",
    "NSTextField",
    "NSView",
    "NSControl",
    "NSResponder",
    "NSGraphics",
    "NSCell",
    "NSText",
    "NSTextView",
    "NSTextStorage",
    "NSLayoutManager",
    "NSTextContainer",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSProgressIndicator",
    "NSSlider",
    "NSCollectionView",
    "NSCollectionViewFlowLayout",
    "NSCollectionViewLayout",
    "NSTableView",
    "NSTableColumn",
    "NSScrollView",
    "NSViewController",
    "NSLayoutConstraint",
    "NSLayoutAnchor",
    "NSUserInterfaceItemIdentification",
    "block2",
] }
thiserror = "2.0.18"
clap = { version = "4.6.0", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["as_ref", "display"] }

[dev-dependencies]
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["time"] }
