[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
reactive_core = { path = "../core", package = "core" }
ui = { path = "../ui" }
appkit = { path = "../appkit" }
resources = { path = "../resources", features = ["reactive"] }
unic-langid = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
resources-build = { path = "../resources-build" }
