[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
reactive-core = { path = "../reactive-core" }
reactive-macros = { path = "../reactive-macros" }
tokio = { version = "1.13.0", features = ["full"] }
