[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
dotenvy = "0.15.7"
env_logger = "0.10.0"
log = "0.4.20"
reactive-core = { path = "../reactive-core" }
reactive-derive = { path = "../reactive-derive" }
derive-jni = { path = "../derive-jni" }
tokio = { version = "1.13.0", features = ["full"] }
jni = { version = "0.21.1", features = ["invocation"] }
