[package]
name = "jranerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
classy = "0.3.0"
convert_case = "0.6.0"
jni = "0.21.1"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
combine = "4.6.6"
zip = "0.6.6"
thiserror = "1.0.50"
reqwest = { version = "0.11.22", features = ["blocking"] }
xmltree = "0.10.3"
jbridge = { path = "../jbridge" }

# [lib]
# proc-macro = true
