[package]
name = "reactive-droid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
# ndk = { version = "0.8.0", features = ["jni", "sync", "api-level-23"] }
reactive-core = { path = "../reactive-core" }
reactive-macros = { path = "../reactive-macros" }

[lib]
crate-type = ["cdylib"]
