[package]
name = "reactive-droid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
log = "0.4.20"
reactive-core = { path = "../reactive-core" }
reactive-derive = { path = "../reactive-derive" }
derive_builder = "0"
derive-jni = { path = "../derive-jni" }
tokio = { version = "1.34.0", features = ["rt", "time"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0"

[lib]
crate-type = ["cdylib"]
