[package]
name = "reactive-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.69"
quote = "1.0.33"
rstml = "0.11.2"

[lib]
proc-macro = true
