[package]
name = "uikit"
version = "0.1.0"
edition = "2024"

[dependencies]
apple = { path = "../apple" }
reactive_core = { path = "../core", package = "core" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSThread"] }
objc2-ui-kit = { version = "0.3", features = [
    "UIApplication",
    "UIView",
    "UIStackView",
    "UIButton",
    "UILabel",
    "UIWindow",
    "UIViewController",
    "UIControl",
    "UIFont",
    "UIResponder",
    "UIGeometry",
] }
