[package]
name = "demo-app-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demo-app"
path = "src/main.rs"

[dependencies]
reactive_core = { path = "../../core", package = "core" }
ui_core = { path = "../../ui-core", package = "ui-core" }
resources = { path = "../../resources", features = ["reactive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0"

[target.'cfg(target_os = "macos")'.dependencies]
appkit = { path = "../../appkit" }
gtk = { path = "../../gtk" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { path = "../../gtk" }

[build-dependencies]
resources-build = { path = "../../resources-build" }
