[package]
name = "demo-app-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demo-app"
path = "src/main.rs"

[[bin]]
name = "hn-stories"
path = "src/hn_stories.rs"

[dependencies]
reactive_core = { path = "../../core", package = "core" }
resources = { path = "../../resources", features = ["reactive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0"
dotenvy = "0"

[target.'cfg(target_os = "macos")'.dependencies]
ui_core = { path = "../../ui-core", package = "ui-core", features = ["appkit", "gtk"] }

[target.'cfg(target_os = "linux")'.dependencies]
ui_core = { path = "../../ui-core", package = "ui-core", features = ["gtk"] }

[build-dependencies]
resources-build = { path = "../../resources-build" }
