[package]
name = "demo-app-macos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demo-app-macos"
path = "src/main.rs"

[[bin]]
name = "text-input-demo"
path = "src/text_input_demo.rs"

[dependencies]
reactive_core = { path = "../../core", package = "core" }
appkit = { path = "../../appkit" }
ui_core = { path = "../../ui-core", package = "ui-core" }
resources = { path = "../../resources", features = ["reactive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0"

[build-dependencies]
resources-build = { path = "../../resources-build" }
